--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.5.0",
     "dotenv": "^16.3.1",
     "mongoose": "^7.5.0",
+    "socket.io": "^4.7.2",
     "termx": "^1.2.5",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
